# juturna

./: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  release-please-config.json  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: commitlint.yml  documentation.yml  gh-pages.yml  release-please.yml  ruff.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/apis/: explore.doctree  index.doctree  juturna.components.doctree  juturna.doctree  juturna.hub.doctree  juturna.meta.doctree  juturna.names.doctree  juturna.nodes.doctree  juturna.nodes.proc.doctree  juturna.nodes.sink.doctree  juturna.nodes.source.doctree  juturna.payloads.doctree  juturna.utils.doctree  juturna.utils.jt_utils.doctree  juturna.utils.log_utils.doctree  juturna.utils.net_utils.doctree  juturna.utils.node_utils.doctree  juturna.utils.proc_utils.doctree  modules.doctree
docs/.doctrees/built_in/: builtin.doctree  builtin.proc.doctree  builtin.proc.warp.doctree  builtin.sink.doctree  builtin.sink.notifier_http.doctree  builtin.sink.notifier_udp.doctree  builtin.sink.notifier_websocket.doctree  builtin.sink.videostream_ffmpeg.doctree  builtin.source.audio_file.doctree  builtin.source.audio_rtp.doctree  builtin.source.audio_rtp_av.doctree  builtin.source.doctree  builtin.source.json_http.doctree  builtin.source.json_websocket.doctree  builtin.source.video_file.doctree  builtin.source.video_rtp.doctree  builtin.source.video_rtp_av.doctree  overview.doctree
docs/.doctrees/concepts/: custom_nodes.doctree  index.doctree  logging.doctree  message.doctree  nodes.doctree  payloads.doctree  pipeline.doctree
docs/.doctrees/create/: audio_transcription.doctree  real_world.doctree  video_yolo.doctree
docs/.doctrees/explain/: entities_overview.doctree  messages.doctree  nodes.doctree  pipelines.doctree  rationale.doctree  remote.doctree
docs/.doctrees/guides/: faq.doctree  hub.doctree  index.doctree  install.doctree  quickstart.doctree
docs/.doctrees/how_to/: create_nodes.doctree  create_pipelines.doctree  environment.doctree  observe.doctree  remotise_node.doctree  use_cli.doctree  why_how.doctree
docs/_sources/: index.rst.txt
docs/_static/: pygments.css
docs/apis/: explore.html  index.html  juturna.components.html  juturna.html  juturna.hub.html  juturna.meta.html  juturna.names.html  juturna.nodes.html  juturna.nodes.proc.html  juturna.nodes.sink.html  juturna.nodes.source.html  juturna.payloads.html  juturna.utils.html  juturna.utils.jt_utils.html  juturna.utils.log_utils.html  juturna.utils.net_utils.html  juturna.utils.node_utils.html  juturna.utils.proc_utils.html  modules.html
docs/built_in/: builtin.html  builtin.proc.html  builtin.proc.warp.html  builtin.sink.html  builtin.sink.notifier_http.html  builtin.sink.notifier_udp.html  builtin.sink.notifier_websocket.html  builtin.sink.videostream_ffmpeg.html  builtin.source.audio_file.html  builtin.source.audio_rtp.html  builtin.source.audio_rtp_av.html  builtin.source.html  builtin.source.json_http.html  builtin.source.json_websocket.html  builtin.source.video_file.html  builtin.source.video_rtp.html  builtin.source.video_rtp_av.html  overview.html
docs/concepts/: custom_nodes.html  index.html  logging.html  message.html  nodes.html  payloads.html  pipeline.html
docs/create/: audio_transcription.html  real_world.html  video_yolo.html
docs/explain/: entities_overview.html  messages.html  nodes.html  pipelines.html  rationale.html  remote.html
docs/guides/: faq.html  hub.html  index.html  install.html  quickstart.html
docs/how_to/: create_nodes.html  create_pipelines.html  environment.html  observe.html  remotise_node.html  use_cli.html  why_how.html
docs/source/: conf.py  index.rst
docs/source/apis/: index.rst  (+9 more)
docs/static-index/: apis.html
docs/welcome/: docker.html  install.html
juturna/: __init__.py  __main__.py
juturna/cli/: _cli_utils.py
juturna/components/: __init__.py  _base_node.py  _bridge.py  _buffer.py  _component_builder.py  _dag.py  _mapper.py  _message.py  _node.py  _pipeline.py  _pipeline_manager.py  _poll_bridge.py  _resource_broker.py  _stream_bridge.py  _synchronisation_policy.py  _synchronisers.py  _telemetry_manager.py
juturna/hub/: __init__.py  __main__.py  _auth.py  _get.py  _gh_utils.py  _publish.py  _search.py  _utils.py
juturna/meta/: __init__.py  _constants.py
juturna/names/: __init__.py  _component_status.py  _pipeline_status.py  _pixel_format.py  _service_failure_reason.py  _service_status.py
juturna/nodes/: __init__.py
juturna/payloads/: __init__.py  _control_signal.py  _draft.py  _generics.py  _payloads.py
juturna/remotizer/: .gitignore  _remote_builder.py  _remote_context.py  _remote_service.py  _remote_wrapper.py  compile_protos.sh  expose_protos.sh  requirements.txt  utils.py
juturna/utils/: __init__.py
tests/: conftest.py  test_audio_rtp_av.py  test_buffer.py  test_dag.py  test_e2e_flow.py  test_env_vars.py  test_env_vars_with_logging.py  test_hub.py  test_message.py  test_node.py  test_node_real_pipeline.py  test_node_threads.py  test_node_utils.py  test_payloads.py  test_pipeline.py  test_remote_integration.py
tests/test_pipelines/: test_audio_pipeline.json  test_bytestream_pipeline.json  test_bytestream_pipeline_with_delay.json  test_empty_pipeline.json
(+275 files in other folders)
