[project]
name = "juturna"
version = "1.0.2"
description = "Juturna core library"
authors = [
    { name = "Antonio Bevilacqua", email = "b3by.in.th3.sky@gmail.com" },
    { name = "Paolo Saviano", email = "psaviano@meetecho.com" }
]
maintainers = [
    { name = "Antonio Bevilacqua", email = "b3by.in.th3.sky@gmail.com" },
    { name = "Paolo Saviano", email = "psaviano@meetecho.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/meetecho/juturna"
Documentation = "https://meetecho.github.io/juturna/index.html"
Repository = "https://github.com/meetecho/juturna"
Issues = "https://github.com/meetecho/juturna/issues"
Changelog = "https://github.com/meetecho/juturna/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
av = "^14.2.0"
numpy = "2.2.3,<3.0.0"
requests = "2.32.3,<3.0.0"
websockets = "^15.0.1"

# http wrapper dependencies
fastapi = { version = ">=0.115.12,<0.116.0", optional = true, extras = ["httpwrapper"] }
fastapi-cli = { version = ">=0.0.7,<0.0.8", optional = true, extras = ["httpwrapper"] }

# pipe builder
prompt_toolkit = { version = "^3.0.52", optional = true, extras = ["pipebuilder"] }
rich = { version = "^13.8.1", optional = true, extras = ["pipebuilder"] }

# dev dependencies
ruff = { version = "^0.14.8", optional = true, extras = ["dev"] }
bandit = { version = "^1.9.2", optional = true, extras = ["dev"] }
pre-commit = { version = "^3.4.0", optional = true, extras = ["dev"] }
conventional-pre-commit = { version = "^4.3.0", optional = true, extras = ["dev"] }
pytest = { version = "^8.3.5", optional = true, extras = ["dev"] }
sphinx = { version = "^8.2.3", optional = true, extras = ["dev"] }
sphinxcontrib-apidoc = { version = "^0.5.0", optional = true, extras = ["dev"] }
sphinxcontrib-napoleon = { version = "^0.7", optional = true, extras = ["dev"] }
sphinx-autoapi = { version = "^3.6.0", optional = true, extras = ["dev"] }
sphinx-autobuild = { version = "^2024.10.3", optional = true, extras = ["dev"] }
furo = { version = "^2025.9.25", optional = true, extras = ["dev"] }
sphinx-design = { version = "^0.6.1", optional = true, extras = ["dev"] }
sphinx-new-tab-link = {version = "^0.8.0", optional = true, extras = ["dev"] }

[tool.poetry]
name = "juturna"
version = "1.0.2"
description = "Juturna core library"
authors = [ "dev@meetecho.com" ]
 packages = [
    { include = "juturna" }
]

[tool.poetry.extras]
httpwrapper = ["fastapi", "fastapi-cli"]
pipebuilder = ["prompt_toolkit", "rich"]
dev = ["pytest",
       "pre-commit",
       "bandit",
       "conventional-pre-commit",
       "ruff",
       "sphinx",
       "sphinx-autoapi",
       "sphinx-autobuild",
       "sphinxcontrib-apidoc",
       "sphinxcontrib-napoleon",
       "furo",
       "sphinx-design",
       "sphinx_new_tab_link"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
bandit = "^1.9.2"
pre-commit = "^3.4.0"
ruff = "^0.14.8"
conventional-pre-commit = ">=3.0.0"
sphinx = "^8.2.3"
sphinxcontrib-apidoc = "^0.5.0"
sphinxcontrib-napoleon = "^0.7"
sphinx-autoapi = "^3.6.0"
sphinx-autobuild = "^2024.10.3"
furo = "^2025.9.25"
sphinx-design = "^0.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
