[project]
name = "juturna"
version = "2.0.0"
description = "Juturna core library"
authors = [
    { name = "Antonio Bevilacqua", email = "b3by.in.th3.sky@gmail.com" },
    { name = "Paolo Saviano", email = "psaviano@meetecho.com" }
]
maintainers = [
    { name = "Antonio Bevilacqua", email = "b3by.in.th3.sky@gmail.com" },
    { name = "Paolo Saviano", email = "psaviano@meetecho.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "av>=16.0.0",
    "numpy>=2.2.3,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "websockets>=16.0"
]

[project.urls]
Homepage = "https://github.com/meetecho/juturna"
Documentation = "https://meetecho.github.io/juturna/index.html"
Repository = "https://github.com/meetecho/juturna"
Issues = "https://github.com/meetecho/juturna/issues"
Changelog = "https://github.com/meetecho/juturna/blob/main/CHANGELOG.md"

[project.optional-dependencies]
httpwrapper = [
    "fastapi>=0.127.1",
    "fastapi-cli>=0.0.7,<0.0.8"
]
pipebuilder = [
    "prompt_toolkit>=3.0.52",
    "rich>=14.1.0"
]
warp = [
    "grpcio==1.76.0",
    "grpcio-tools==1.76.0",
    "protobuf==6.33.1",
    "typing_extensions==4.15.0"
]
doc = [
    "sphinx<9.0,>6.0",
    "sphinx-autoapi==3.6.0",
    "sphinx-autobuild==2025.8.25",
    "sphinxcontrib-apidoc==0.6.0",
    "sphinxcontrib-napoleon==0.7",
    "furo==2025.7.19",
    "sphinx-design==0.7.0",
    "sphinx_new_tab_link==0.8.0"
]
dev = [
    "pre-commit==4.5.0",
    "bandit==1.9.2",
    "conventional-pre-commit==4.3.0"
]
lint = [
    "ruff>= 0.14.8"
]
test = [
    "pytest==9.0.2"
]
full = [
    "juturna[httpwrapper,pipebuilder,warp]"
]
dev_full = [
    "juturna[doc,dev,lint,test]"
]
all = [
    "juturna[full,dev_full]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
